Add docker compose for all services